# Point-Cloud-Object-Segmentation-Using-Multi-Elevation-Layer-2D-Bounding-Boxes

./: CMakeLists.txt  README.md  main.cpp
Test Code (Old)/src/: main - Copy.cpp  plyReader.cpp
include/: AABB.h  AABBTree.h  Coordinates.h  FileHandler3D.h  Functions3D.h  IAABB.h  Measurements.h  MeshTypes.hpp  main.h  plyReader.h
src/: AABBTree.cpp  FileHandler3D.cpp  Functions3D.cpp  PlyReader.cpp
